# APL_calculator

./: .gitignore  Makefile  README.md  cdk.json  cdk_app.py  file_tree.py  flask_app.py  pyproject.toml  requirements.txt
apl_calculator/: apl_calculator_stack.py
calculation/: calculators.py  dots.py  goodlift.py  ipf.py  mccullough.py  wilks.py  wilks_2.py
flask_app/: flask_app.py
flask_app/templates/: index.html
lambda/: lambda_handler.py
lambda_function/: lambda_handler.py
lib/: flask_app_stack.py
templates/: index.html
tests/: pytest.ini  test_dots.py  test_flask_api.py  test_flask_app_stack.py  test_ipf.py  test_lambda_handler.py  test_mccullough.py  test_wilks.py
tests/unit/: test_apl_calculator_stack.py
